# drone

./: CMakeLists.txt
docs/: tutorials.md
include/: 3DVisualization.h  DronePathOptimizer.h  DynamicPathPlanner.h  HeuristicImprovement.h  MachineLearningIntegration.h  MultiUAVCoordination.h  ParallelComputation.h  PathOptimizer.h  PathSmoothing.cpp  PathSmoothing.h  SensorIntegration.h  SystemIntegration.h  UserInterface.h  WeatherModeling.h
script/: drone_flight_control.py  flight_control.py
src/: 3DVisualization.cpp  DronePathOptimizer.cpp  DynamicPathPlanner.cpp  HeuristicImprovement.cpp  MachineLearningIntegration.cpp  MultiUAVCoordination.cpp  ParallelComputation.cpp  PathOptimizer.cpp  SensorIntegration.cpp  SystemIntegration.cpp  UserInterface.cpp  WeatherModeling.cpp  main.cpp
